fixed overflow problem

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,7 +1,6 @@
 html, body, #outside-container, #react-app, #loading-screen, #home-screen {
     margin: 0;
     padding: 0;
-    height: 100%;
 }
 
 html, body, button {
@@ -10,7 +9,8 @@ html, body, button {
 
 
 #small-screen {
-    width: 60%; 
+    margin: 1em;
+    max-width: 600px; 
 }
 
 .flex-container {
